--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,9 @@
 
 #Do not save copies of conflicting/missing schematic symbols they should all be in a either cache or in Board library and refferenced occordingly
 *-rescue.lib
-*-cache.lib
 
 #DO not save backup schematic files
-*-bak
+*.bak
 
 #Temporary file
 *.000
@@ -14,20 +13,13 @@
 #Don't push Backup Layout file, but do push the original
 *-save.kicad_pcb
 
-#dcm files and backup
-*.dcm
+#Backup for .dcm (description and aliases) file
 *.bck
 
 #Dont save the net file
 *.net
 
 #Gerber Directory(generate your own dammit)
-Gerber/
+Gerber
 
-#zip files
-*.zip
 
-fp-info-cache
-sym-lib-table
-fp-info-cache
-fp-lib-table
